--- a/MyApp/app/build.gradle
+++ b/MyApp/app/build.gradle
@@ -32,7 +32,8 @@ android {
 
 dependencies {
 
-    //implementation 'com.android.support:appcompat-v7:28.0.0'
+    //implementation 'com.android.support:appcompat-v7:28.0.
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
