Corrected the way the user is notified of network status

--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".TrafficCamera"
             android:exported="false"
-            android:label="@string/title_activity_traffic_camera"
+            android:label="TrafficCamera"
             android:parentActivityName=".MainActivity"
             android:theme="@style/Theme.MyApp.NoActionBar" />
         <activity
