--- a/MyApp/app/src/main/AndroidManifest.xml
+++ b/MyApp/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         android:theme="@style/Theme.MyApp">
         <activity
             android:name=".FirebaseActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_firebase"
+            android:parentActivityName=".MainActivity"/>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
