--- a/MyApp/app/build.gradle
+++ b/MyApp/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "JBiolette.AD340"
+        applicationId "com.JBiolette.AD340"
         minSdk 26
         targetSdk 32
         versionCode 1
